@@ -6,6 +6,11 @@ SBuild 0.3.2.9000
 * Based up-to-date detection of phony targets on virtual last modified time
   stamps instead of boolean marker.
 * Reworked preorder dependency algorithm.
+* Improved internally used download function, which now handles successful
+  download more efficiently and does not leave temp file on download failures.
+  This improves all scheme handlers as well.
+* Added new commandline options --check and --check-recursive to check all 
+  defined targets for cycles and potentially missing scheme handlers.
 
 SBuild 0.3.2 - 2013-01-26
 
